// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "component" prop 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #0069D0;
  font-weight: bold;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  outline: none;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2px;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

<div>
  <button
    class="emotion-0"
  >
    Button link
  </button>
</div>
`;

exports[`should accept all Text props 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #0069D0;
  font-weight: bold;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: inherit;
  font-size: 2rem;
  font-weight: bolder;
  font-style: italic;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2px;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

<div>
  <a
    class="emotion-0"
  >
    All text props
  </a>
</div>
`;

exports[`should accept the "style" prop 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #0069D0;
  font-weight: bold;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  outline: none;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
  color: red;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2px;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

<div>
  <a
    class="emotion-0"
    href="/"
  >
    Red link
  </a>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #0069D0;
  font-weight: bold;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  outline: none;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2px;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

<div>
  <a
    class="emotion-0"
    href="/"
    target="_blank"
  >
    Link to somewhere
  </a>
</div>
`;
